# telebot

./: README.md  callback.json  dump.rdb  main.py  pyproject.toml  test_bot.py  test_redis.py  test_sqlalch.py
CallbackData/: CallbackData.py
FSM/: FSM_1.py  profile.py
InlineBot/: bold_italic_message.py  echo_inline_2.py  echo_inline_bot.py
Middleware/: TestMiddleware.py  admin_middleware.py  check_ikb.py  decor_key_handler.py
Project_1/: keyboards.py  main.py
Project_2/: bot.py  filters.py  middlewares.py
Project_3/: bot_router.py  db.py  init_db.py  main.py  redis_client.py  utils.py
Project_3/bot_utils/: handlers.py  keyboards.py  state.py
Project_3/data_files/: category_data.csv
Project_3/database/: manager.py  models.py
SQLite/: main.py  new.db  sqlite.py
callback/: callback.py  callback_count.py  close_ikb_like.py
keyboad/: inline_keyboard.py  keyboad.py  task2.py  task3.py
start_aiogram_bot/: commands_bot.py  echo_bot.py  filter_validate.py  location_photo.py  photo_load.py  screen_shot.py  sticker_emoji.py  task1.py
